# LibraryAPI

./: .dockerignore  .env.semple  Dockerfile  README.md  docker-compose.yml  pyproject.toml
books/: admin.py  models.py  paginators.py  serializers.py  tests.py  urls.py  validators.py  views.py
books/migrations/: 0001_initial.py  0002_genre_book_genres.py  0003_alter_genre_options.py  0004_alter_book_isbn_author_unique_author.py
config/: settings.py  urls.py
loans/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
loans/migrations/: 0001_initial.py  0002_initial.py  0003_alter_loan_options_loan_due_date_loan_renewals_count.py  0004_alter_loan_options.py
nginx/: Dockerfile  nginx.conf
users/: models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
users/management/commands/: createuser.py  init_roles.py
users/migrations/: 0001_initial.py
